# AT1-PerceptronManual

./: LINK PARA O DATASET  README.md  main.py  pyproject.toml
notebooks/: ATV-Testes.ipynb
src/: schemas.py
src/models/: perceptron.py
